After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 324517 - menu syntax highlighting is wrong
menu syntax highlighting is wrong
Status: RESOLVED FIXED
Product: bluefish
Classification: Other
Component: application
1.0.1
Other Linux
: Normal normal
: ---
Assigned To: Bluefish Maintainer(s)
Bluefish Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2005-12-19 17:07 UTC by Olivier Sessink
Modified: 2006-01-24 08:30 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Olivier Sessink 2005-12-19 17:07:50 UTC
/build/buildd/bluefish-1.0.1/./configure --build=i486-linux-gnu
--prefix=/usr --includedir=${prefix}/include --mandir=
${prefix}/share/man --infodir=${prefix}/share/info --sysconfdir=/etc
--localstatedir=/var --libexecdir=${prefix}/lib/bluefish --srcdir=.
--disable-maintainer-mode --disable-update-databases
--with-freedesktop_org-menu=/usr/share/applications
--with-freedesktop_org-mime=/usr/share/mime

when you choose 'Resaltar sintaxis' ('Highlight syntax') in 'Documento'
menu ('Document') there is a tick showing if the syntax is highlighted
or not. That works properly, but if you choose the command 'Actualizar
resaltado de sintaxis' ('Refresh syntax highlighting') when the
'Highlight syntax' tick is off, the code is highlighted and the tick is
still off. 
Now, if you choose the 'Highlight syntax' again, the highlighting
switchs between on and off properly, but the tick switchs in the
opposite way.
Comment 1 Jim Hayward 2005-12-25 18:35:48 UTC
I can't reproduce the behavior of the "tick" marks with either FC4 or Ubuntu 5.10 using current stable CVS. I can't think of anything that has changed with 1.0.1 that would effect this behavior. I've seen bugs with certain theme engines and checkbutton menu items before. Maybe this is a theme bug, not a bluefish bug?

If I select 'Refresh syntax highlighting' with 'Highlight syntax' disabled then the document is highlighted and 'Highlight syntax' is now correctly selected. Although if 'Highlight syntax' is disabled then the ability to select 'Refresh syntax highlighting' should probably not be allowed.
Comment 2 Daniel Leidert 2006-01-18 10:09:16 UTC
I can reproduce the bug with a recent Sid. IMHO should make the '"Update Highlighting" F5' depending on the current "Syntax Highlight" setting. If the Syntax highlight is disabled, the "Update highlighting" menu entry should be greyed out and F5 should not be usable. That's IMHO consistent and independent from any theme issues.
Comment 3 Daniel Leidert 2006-01-24 08:30:35 UTC
Fixed for both, stable (document.c: 1.324.2.13 -> 1.324.2.14) and development tree (document.c: 1.449 -> 1.450).