bluefish/src/document.c
@@ -259,8 +259,7 @@ void doc_update_highlighting(Tbfwin *bfwin,guint callback_action, GtkWidget *wid
 	if (!bfwin->current_document) return;
 	DEBUG_MSG("doc_update_highlighting, curdoc=%p, highlightstate=%d\n", bfwin->current_document, bfwin->current_document->highlightstate);
 	if (bfwin->current_document->highlightstate == 0) {
-		setup_toggle_item(gtk_item_factory_from_widget(bfwin->menubar),
-			  _("/Document/Highlight Syntax"), TRUE);
+		setup_toggle_item(gtk_item_factory_from_widget(bfwin->menubar), "/Document/Highlight Syntax", TRUE);
 		DEBUG_MSG("doc_update_highlighting, calling doc_toggle_highlighting_cb\n");
 		doc_toggle_highlighting_cb(bfwin, 0, NULL);
 	} else {
